# PlayDex

./: .gitignore  LICENSE  Package.swift  README.md
.github/workflows/: playdex-desktop-ci.yml  playdex-desktop-release.yml
App/: AppDelegate.swift  Info.plist  PlayDexApp.swift
Models/: DownloadJob.swift  Playlist.swift  Track.swift
PlayDex.xcodeproj/: project.pbxproj
Resources/python/: config.example.json  deemix_engine.py
Services/: CSVLibraryParser.swift  DownloadManager.swift  KeychainStore.swift  PythonBridge.swift  SettingsStore.swift  iTunesLibraryParser.swift
Views/: ContentView.swift  DownloadQueueView.swift  EmptyStateView.swift  PlaylistSidebarView.swift  SettingsView.swift  TrackListView.swift
docs/: RELEASE_CHECKLIST.md  index.html
docs/assets/: index-11qau5iE.css  index-9YJahQh9.js  index-BZ7GSycM.js  index-BeYNgsW0.js  index-CqfuQejZ.js  index-GksWc44o.js  index-SXdpb_sb.js  index-mnfnV-0V.css
landing/: index.html  package-lock.json  vite.config.js
landing/src/: App.css  App.jsx
playdex-desktop/: ArquitecturaWinLin.md  README.md  SETUP.md  SkillsMcpWinLin.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
playdex-desktop/src-tauri/: Cargo.toml  generate_icon.py  tauri.conf.json
playdex-desktop/src-tauri/icons/: icon.icns
playdex-desktop/src-tauri/resources/: test.csv
playdex-desktop/src-tauri/resources/engine/: deemix_engine.py  requirements.txt
playdex-desktop/src-tauri/src/: csv_parser.rs  engine_process.rs  keyring.rs  main.rs  settings.rs  types.rs  xml_parser.rs
(+11 files in other folders)
