[package]
name = "playdex-desktop"
version = "0.1.2"
description = "PlayDex desktop app for Windows and Linux"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-dialog = { version = "2.0" }
tauri-plugin-notification = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }
tauri-plugin-fs = { version = "2.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
keyring = "2"
dirs = "5"
csv = "1"
plist = "1"
rfd = "0.14"
 opener = { version = "0.7", features = ["reveal"] }
 anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
